<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <include layout="@layout/title_bar_with_navigation"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_tips"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="12sp"
        android:textColor="@color/contentPrimary"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/wal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/create_wallet_name"
        android:inputType="text"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="16sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/wal_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/create_wallet_password"
        android:inputType="text"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="16sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/wal_password_rep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/create_wallet_password_rep"
        android:inputType="text"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="16sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/wal_password_mess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/create_wallet_password_mess"
        android:inputType="text"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_check_user_read"
            android:gravity="left|center"/>

        <TextView
            android:id="@+id/service_clause"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create_user_service_clause"
            android:layout_marginLeft="5dp"
            android:gravity="left|center"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <Button
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/create_wallet_cre_btn"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/import_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="6dp"
        android:background="#00ffffff"
        android:text="@string/create_wallet_lea_btn"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>